Java 8 compat rewrites and test fixes